changed the title and removed two empty lines

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="font-family: Montserrat;">
   <div class="bg-main"></div>
   <main>
-    <h1 class="main-tittle">Выбери свой продукт</h1>
+    <h1 class="main-title">Выбери свой продукт</h1>
     <div class="product-card-wrapper">
       <section class="product-card">
           <img src="/images/moisturizing-mousse.png" alt="Увлажняющий мусс" class="product-card__img" width="290" height="245">  
