--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="bg-main"></div>
   <main>
     <h1 class="main-title">Выбери свой продукт</h1>
-    <button id="change-color-btn">поменять цвет кнопки</button>
+    <button id="color-change-btn">поменять цвет кнопки</button>
     <div class="product-card-wrapper">
       <section class="product-card">
           <img src="/images/moisturizing-mousse.png" alt="Увлажняющий мусс" class="product-card__img" width="290" height="245">  
@@ -98,9 +98,5 @@
     </div>
     <script src="script.js"></script>
   </main>
-    
-  
-
-  
 </body>
 </html>
